Front End Pages, Agenda page on progress

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -15,11 +15,11 @@
                 <img class="logo" src="../../src/logo.jpg" alt="logo">
                 <nav>
                     <ul class="nav__links">
-                        <li><a href="#">About</a></li>
+                        <li><a href="../about/about.html">About</a></li>
                         <li><a href="#">Help</a></li>
                         <li><a href="#">Contacts</a></li>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li><a href="../register/register.html">Register</a></li>
                     </ul>
                 </nav>
             </header>
@@ -37,7 +37,7 @@
             <div class="submit">
                 <button type="submit" class="login-btn">Login</button>
             </div>
-            <h5>Don't Have An Account Yet?  <a href="#">Register</a></h5>
+            <h5>Don't Have An Account Yet?  <a href="../register/register.html">Register</a></h5>
         </section>
     </body>
     <footer>
