--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate || Register</title>
+        <title>Studymate || About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="register.css">
+        <link rel="stylesheet" href="about.css">
     </head>
     <body>
         <section class="home_section">
@@ -24,22 +24,21 @@
                 </nav>
             </header>
         </section>
-        <div class="register-title">
-            <h1>Welcome to StudyMate</h1>
-            <h1>Please Register before continuing</h1>
-        </div>
-        <section class = "register-box">
-            <h2>Register</h2>
-            <h4 id="usertext">Username</h4>
-            <input class="username" placeholder="Enter Your Username" type="text" autofocus autocomplete="off">
-            <h4 id="passtext">Password</h4>
-            <input class="password" placeholder="Enter Your Password" type="text" autocomplete="off">
-            <h4 id="passtext">Re-Enter Password</h4>
-            <input class="password" placeholder="Re-type Your Password" type="text" autocomplete="off">
-            <div class="submit">
-                <button type="submit" class="register-btn">Register</button>
+        <section class="Creators">
+            <h2>Creators</h2>
+            <div class="alfons">
+                <img src = "../../src/logo.jpg" alt="Profile">
+                <h4>Alfonsus Rodriques Rendy</h4>
             </div>
-            <h5>Already Have An Account?  <a href="../login/login.html">Login</a></h5>
+            <div class="nic">
+                <img src = "../../src/logo.jpg" alt="Profile">
+                <h4>Nicholas Sidharta</h4>
+            </div>
+        </section>
+        <section class="description">
+            <h2>What is Studymate?</h2>
+            <h4>Studymate is a web application designed to help students and learners in their studying journey. Studymate is built to establish an ease of access to different types of necessity when learning or discovering new things.</h4>
+            <!--To be continued-->
         </section>
     </body>
     <footer>
