Agenda Page Done and some minor js fix

--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -40,7 +40,13 @@
                 </div>
             </form>
             <div class="todo_container">
+                <h3>Due Today</h3>
                 <ul class="todo_list"></ul>
+            </div>
+            <div class="vl"></div>
+            <div class="todo_not_today_container">
+                <h3>Upcoming</h3>
+                <ul class="todo_not_today_list"></ul>
             </div>
         </section>
         <div class="sidebar">
