Front End: Font Awesome Icon Replacement + Additional Pages

--- a/pages/help/help.html
+++ b/pages/help/help.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate || Register</title>
+        <title>Studymate || Help</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="register.css">
+        <link rel="stylesheet" href="help.css">
     </head>
     <body>
         <section class="home_section">
@@ -25,23 +25,8 @@
                 </nav>
             </header>
         </section>
-        <div class="register-title">
-            <h1>Welcome to StudyMate</h1>
-            <h1>Please Register before continuing</h1>
-        </div>
-        <section class = "register-box">
-            <h2>Register</h2>
-            <h4 id="usertext">Username</h4>
-            <input class="username" placeholder="Enter Your Username" type="text" autofocus autocomplete="off">
-            <h4 id="passtext">Password</h4>
-            <input class="password" placeholder="Enter Your Password" type="text" autocomplete="off">
-            <h4 id="passtext">Re-Enter Password</h4>
-            <input class="password" placeholder="Re-type Your Password" type="text" autocomplete="off">
-            <div class="submit">
-                <button type="submit" class="register-btn">Register</button>
-            </div>
-            <h5>Already Have An Account?  <a href="../login/login.html">Login</a></h5>
-        </section>
+        <h2>Help</h2>
+        <!--otw-->
     </body>
     <footer>
         Copyright&copy;Studymate - CS50x Final Project
