--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -7,6 +7,7 @@
         <title>Studymate || Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="login.css">
     </head>
     <body>
@@ -16,9 +17,9 @@
                 <nav>
                     <ul class="nav__links">
                         <li><a href="../about/about.html">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="../help/help.html">Help</a></li>
+                        <li><a href="../contacts/contacts.html">Contacts</a></li>
+                        
                         <li><a href="../register/register.html">Register</a></li>
                     </ul>
                 </nav>
@@ -40,6 +41,9 @@
             <h5>Don't Have An Account Yet?  <a href="../register/register.html">Register</a></h5>
         </section>
     </body>
+    <br>
+    <br>
+    <br>
     <footer>
         Copyright&copy;Studymate - CS50x Final Project
     </footer>
