--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -7,6 +7,7 @@
         <title>Studymate || About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="about.css">
     </head>
     <body>
@@ -16,9 +17,9 @@
                 <nav>
                     <ul class="nav__links">
                         <li><a href="../about/about.html">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="../help/help.html">Help</a></li>
+                        <li><a href="../contacts/contacts.html">Contacts</a></li>
+                        
                         <li><a href="../login/login.html">Login</a></li>
                     </ul>
                 </nav>
@@ -27,11 +28,11 @@
         <section class="Creators">
             <h2>Creators</h2>
             <div class="alfons">
-                <img src = "../../src/logo.jpg" alt="Profile">
+                <img src = "../../src/profile.jpg" alt="Profile">
                 <h4>Alfonsus Rodriques Rendy</h4>
             </div>
             <div class="nic">
-                <img src = "../../src/logo.jpg" alt="Profile">
+                <img src = "../../src/profile.jpg" alt="Profile">
                 <h4>Nicholas Sidharta</h4>
             </div>
         </section>
