--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -6,6 +6,7 @@
         <title>Studymate || Profile</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="profile.css">
     </head>
     <body>
@@ -15,9 +16,9 @@
                 <nav>
                     <ul class="nav__links">
                         <li><a href="../about/about.html">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="../help/help.html">Help</a></li>
+                        <li><a href="../contacts/contacts.html">Contacts</a></li>
+                        
                     </ul>
                 </nav>
                 <a class="cta" href="../profile/profile.html"><button>Your Profile</button></a>
@@ -34,56 +35,56 @@
             <ul class="nav_list">
                 <li>
                     <a href="../dashboard/dashboard.html">
-                        <img src="../../src/dashboard.jpg" alt="dashboard">
+                        <i class="fa fa-home fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Dashboard</span>
                     </a>
                     <span class="tooltip">Dashboard</span>
                 </li>
                 <li>
                     <a href="../agenda/agenda.html">
-                        <img src="../../src/agenda.jpg">
+                        <i class="fa fa-calendar fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Agenda</span>
                     </a>
                     <span class="tooltip">Agenda</span>
                 </li>
                 <li>
                     <a href="../note_archive/note_archive.html">
-                        <img src="../../src/note_archive.jpg">
+                        <i class="fa fa-book fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Note Archive</span>
                     </a>
                     <span class="tooltip">Note Archive</span>
                 </li>
                 <li>
                     <a href="../note_share/share.html">
-                        <img src="../../src/note_share.jpg">
+                        <i class="fa fa-share-alt-square fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Note Share</span>
                     </a>
                     <span class="tooltip">Note Share</span>
                 </li>
                 <li>
                     <a href="../relax/relax.html">
-                        <img src="../../src/relax_room.jpg">
+                        <i class="fa fa-coffee fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Relax Room</span>
                     </a>
                     <span class="tooltip">Relax Room</span>
                 </li>
                 <li>
                     <a href="../search/search.html">
-                        <img src="../../src/search_courses.jpg">
+                        <i class="fa fa-search fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Search Courses</span>
                     </a>
                     <span class="tooltip">Search</span>
                 </li>
                 <li>
                     <a href="../settings/settings.html">
-                        <img src="../../src/settings.jpg">
+                        <i class="fa fa-cog fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Settings</span>
                     </a>
                     <span class="tooltip">Settings</span>
                 </li>
                 <li>
                     <a href="../login/login.html">
-                        <img src="../../src/logout.jpg">
+                        <i class="fa fa-sign-out fa-2x"></i>
                         <span class="links_name">&nbsp; &nbsp; Logout</span>
                     </a>
                     <span class="tooltip">Logout</span>
@@ -96,6 +97,22 @@
         </section>
         <section class="recentnotes">
             <h2>Recent Note Post</h2>
+            <div class="notes">
+                <img src="../../src/note_default.jpg">
+                <h4>Note Name</h4>
+                <div class="rate">
+                    <input type="radio" id="star5" name="rate" value="5" />
+                    <label for="star5" title="text">5 stars</label>
+                    <input type="radio" id="star4" name="rate" value="4" />
+                    <label for="star4" title="text">4 stars</label>
+                    <input type="radio" id="star3" name="rate" value="3" />
+                    <label for="star3" title="text">3 stars</label>
+                    <input type="radio" id="star2" name="rate" value="2" />
+                    <label for="star2" title="text">2 stars</label>
+                    <input type="radio" id="star1" name="rate" value="1" />
+                    <label for="star1" title="text">1 star</label>
+                </div>
+            </div>
         </section>
         <script type="module" src="profile.js"></script>
     </body>
