--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -6,6 +6,7 @@
         <title>Studymate || Dashboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="settings.css">
     </head>
     <body>
@@ -15,9 +16,9 @@
                 <nav>
                     <ul class="nav__links">
                         <li><a href="../about/about.html">About</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="../help/help.html">Help</a></li>
+                        <li><a href="../contacts/contacts.html">Contacts</a></li>
+                        
                     </ul>
                 </nav>
                 <a class="cta" href="../profile/profile.html"><button>Your Profile</button></a>
@@ -59,7 +60,7 @@
             </div>
             <ul class="nav_list">
                 <li>
-                    <a href="dashboard.html">
+                    <a href="../dashboard/dashboard.html">
                         <img src="../../src/dashboard.jpg" alt="dashboard">
                         <span class="links_name">&nbsp; &nbsp; Dashboard</span>
                     </a>
