--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -68,7 +68,7 @@
         <section class="note_rec">
             <h2>Note Recommendation</h2>
             <div class="notes">
-                <img src="../../src/profile.jpg">
+                <img src="../../src/note_default.jpg">
                 <h4>Note Name</h4>
                 <div class="rate">
                     <input type="radio" id="star5" name="rate" value="5" />
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="notes">
-                <img src="../../src/profile.jpg">
+                <img src="../../src/note_default.jpg">
                 <h4>Note Name</h4>
                 <div class="rate">
                     <input type="radio" id="star5" name="rate" value="5" />
