minor html code change

--- a/pages/help/help.html
+++ b/pages/help/help.html
@@ -26,8 +26,20 @@
             </header>
         </section>
         <h2>Help</h2>
-        <!--otw-->
+        <div class="dropdown">
+            <h3>Dashboard</h3>
+            <h3>Agenda</h3>
+            <h3>Note Archive</h3>
+            <h3>Note Share</h3>
+            <h3>Relax Room</h3>
+            <h3>Search Courses</h3>
+            <h3>Settings</h3>
+            <h3>Questions?</h3>
+        </div>
     </body>
+    <br>
+    <br>
+    <br>
     <footer>
         Copyright&copy;Studymate - CS50x Final Project
     </footer>
