help page done, about page updated, added email as contact in register and displayed in profile

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -19,7 +19,6 @@
                         <li><a href="../about/about.html">About</a></li>
                         <li><a href="../help/help.html">Help</a></li>
                         <li><a href="../contacts/contacts.html">Contacts</a></li>
-                        
                         <li><a href="../login/login.html">Login</a></li>
                     </ul>
                 </nav>
@@ -28,18 +27,18 @@
         <section class="Creators">
             <h2>Creators</h2>
             <div class="alfons">
-                <img src = "../../src/profile.jpg" alt="Profile">
+                <a href="https://github.com/ArnedyNavi"><img src = "../../src/profile.jpg" alt="Profile"></a>
                 <h4>Alfonsus Rodriques Rendy</h4>
             </div>
             <div class="nic">
-                <img src = "../../src/profile.jpg" alt="Profile">
+                <a href="https://github.com/Nicholas-Sidharta12365"><img src = "../../src/nic.jpg" alt="Profile"></a>
                 <h4>Nicholas Sidharta</h4>
             </div>
         </section>
         <section class="description">
             <h2>What is Studymate?</h2>
-            <h4>Studymate is a web application designed to help students and learners in their studying journey. Studymate is built to establish an ease of access to different types of necessity when learning or discovering new things.</h4>
-            <!--To be continued-->
+            <h4>Studymate is a web application designed to help students and learners in their studying journey. Studymate is built to establish an ease of access to different types of necessity when learning or discovering new things. Our goal is to create the perfect virtual studying environment so that students can focus more on their studies. Our platform is a community based system where the community will decide the workflow of this web application. Finally, we hope you can enjoy this web application and may you experince a comfortable studying journey.</h4>
+            <h4>- The Developers -</h4>
         </section>
     </body>
     <footer>
