--- a/pages/help/help.html
+++ b/pages/help/help.html
@@ -19,7 +19,6 @@
                         <li><a href="../about/about.html">About</a></li>
                         <li><a href="../help/help.html">Help</a></li>
                         <li><a href="../contacts/contacts.html">Contacts</a></li>
-                        
                         <li><a href="../login/login.html">Login</a></li>
                     </ul>
                 </nav>
@@ -27,15 +26,24 @@
         </section>
         <h2>Help</h2>
         <div class="dropdown">
-            <h3>Dashboard</h3>
-            <h3>Agenda</h3>
-            <h3>Note Archive</h3>
-            <h3>Note Share</h3>
-            <h3>Relax Room</h3>
-            <h3>Search Courses</h3>
-            <h3>Settings</h3>
-            <h3>Questions?</h3>
+            <h3 class="headerdashboard">Dashboard</h3>
+            <p class="dashboard">The dashboard page is the main page where users are greeted to after login-in. In this page, users are able to gain quick access to their agenda for today and add a new event on that same day. Users are also given recommendation for courses and notes.</p>
+            <h3 class="headerAgenda">Agenda</h3>
+            <p class="Agenda">The agenda page is a page where users can keep track of their todo-list. The page is divided into two sections, the first one being the tasks thats due today, the second one is for the task that are due in future times.</p>
+            <h3 class="headerNoteArchive">Note Archive</h3>
+            <p class="NoteArchive">The note archive page is a page where users can manage their notes. The page is divided between public notes (Notes that are shared with other users) and private notes (Notes that the user wants to keep for themselves). Users can also see ratings on their posted public notes on this page as well.</p>
+            <h3 class="headerNoteShare">Note Share</h3>
+            <p class="NoteShare">The note share page is a page where users can share their amazing notes and study material with other users. In this page, users are also given the freedom to give ratings to notes that are recommended and/or searched.</p>
+            <h3 class="headerRelaxRoom">Relax Room</h3>
+            <p class="RelaxRoom">The relax room as the name states, is a page where users can take their time to relax after and/or while doing their work. This page also plays youtube videos in order to keep user accompanied (Due to browsers terms, the video is automatically set to mute when entering the page, thus the user need to manually click the speaker button to enable the audio). Users can also change the video and the background on the settings page based on their preferences.</p>
+            <h3 class="headerSearchCourses">Search Courses</h3>
+            <p class="SearchCourses">The search courses page is designed for hungry learners, where we show top rated courses for a certain topic. Users are also welcome to rate the courses based on their own experience.</p>
+            <h3 class="headerSettings">Settings</h3>
+            <p class="Settings">The settings page is page where users can personalize some area of their websites in order to fit to their theme. Users can also set their contact information as private or public.</p>
+            <h3 class="headerQuestions">Questions?</h3>
+            <p class="Questions">If you have any more questions, feel free to contact us from our contact page.</p>
         </div>
+        <script type="module" src="help.js"></script>
     </body>
     <br>
     <br>
