--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -94,6 +94,7 @@
         <section class="profile">
             <img src="../../src/profile.jpg">
             <h4>Admin</h4>
+            <h4>admin@gmail.com</h4>
         </section>
         <section class="recentnotes">
             <h2>Recent Note Post</h2>
