--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -33,6 +33,8 @@
             <h2>Register</h2>
             <h4 id="usertext">Username</h4>
             <input class="username" placeholder="Enter Your Username" type="text" autofocus autocomplete="off">
+            <h4 id="mail">Email</h4>
+            <input class="email" placeholder="Enter Your Email" type="email" autocomplete="off">
             <h4 id="passtext">Password</h4>
             <input class="password" placeholder="Enter Your Password" type="text" autocomplete="off">
             <h4 id="passtext">Re-Enter Password</h4>
