--- a/pages/relax/relax.html
+++ b/pages/relax/relax.html
@@ -92,6 +92,7 @@
             </ul>
         </div>
         <button class="collapse">Collapse</button>
+        <button class="play"> <i class="fa fa-play-circle-o" aria-hidden="true"></i> </button>
         <section class="text">
             <h2>Good Evening User</h2>
             <h1></h1>
