--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -31,7 +31,7 @@
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
                     <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-retweet" aria-hidden="true">1000</i>
+                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
                     <i class="fa fa-heart-o" aria-hidden="true">1000</i>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
                     <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-retweet" aria-hidden="true">1000</i>
+                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
                     <i class="fa fa-heart-o" aria-hidden="true">1000</i>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
                     <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-retweet" aria-hidden="true">1000</i>
+                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
                     <i class="fa fa-heart-o" aria-hidden="true">1000</i>
                 </div>
             </div>
