course content added

--- a/pages/social/comment.html
+++ b/pages/social/comment.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Studymate | Social</title>
+        <title>Studymate | Comment</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="social.css">
+        <link rel="stylesheet" href="comment.css">
     </head>
     <body>
         <section class="home_section">
@@ -30,9 +30,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptates! Dignissimos, accusamus libero harum voluptas natus fugit aut est voluptatem aliquam, facere odit repellat magni. Soluta praesentium voluptate consequatur ipsa.</p>
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
-                    <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-heart-o" aria-hidden="true">1000</i>
+                    <i class="fa fa-comment-o fa-comment" aria-hidden="true">1000</i>
+                    <i class="fa fa-bookmark-o fa-bookmark" aria-hidden="true">1000</i>
+                    <i class="fa fa-heart-o fa-heart" aria-hidden="true">1000</i>
                 </div>
             </div>
         </div>
@@ -43,9 +43,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptates! Dignissimos, accusamus libero harum voluptas natus fugit aut est voluptatem aliquam, facere odit repellat magni. Soluta praesentium voluptate consequatur ipsa.</p>
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
-                    <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-heart-o" aria-hidden="true">1000</i>
+                    <i class="fa fa-comment-o fa-comment" aria-hidden="true" onclick="heart()">1000</i>
+                    <i class="fa fa-bookmark-o fa-bookmark" aria-hidden="true">1000</i>
+                    <i class="fa fa-heart-o fa-heart" aria-hidden="true">1000</i>
                 </div>
             </div>
         </div>
@@ -56,9 +56,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptates! Dignissimos, accusamus libero harum voluptas natus fugit aut est voluptatem aliquam, facere odit repellat magni. Soluta praesentium voluptate consequatur ipsa.</p>
                 <img src="../../static/images/note_default.jpg">
                 <div class="interactions">    
-                    <i class="fa fa-comment-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-bookmark-o" aria-hidden="true">1000</i>
-                    <i class="fa fa-heart-o" aria-hidden="true">1000</i>
+                    <i class="fa fa-comment-o fa-comment" aria-hidden="true">1000</i>
+                    <i class="fa fa-bookmark-o fa-bookmark" aria-hidden="true">1000</i>
+                    <i class="fa fa-heart-o fa-heart" aria-hidden="true">1000</i>
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                 </li>
             </ul>
         </div>
-        <script type="module" src="social.js"></script>
+        <script type="module" src="comment.js"></script>
     </body>
     <br>
     <br>
